# pharmabot

src/pharmabot/: README.md  package.xml  setup.py
src/pharmabot/launch/: sim.launch.py
src/pharmabot/pharmabot/: robot_nav.py  scheduler.py  task_manager.py  watchdog.py
src/pharmabot/worlds/: hospital.world
