<package format="3">
  <name>pharmabot</name>
  <version>0.1</version>
  <description>PharmaBot Hospital Simulation</description>

  <maintainer email="you@email.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
